# SpendWise

./: .gitignore  README.md
MockBank/: README.md  config.py  database.py  generator.py  models.py  pyproject.toml  scheduler.py  server.py  stock_prices.py
MockBank/data/: recurring.db  stocks.db  transactions.db
MockBank/static/: app.js  style.css
MockBank/templates/: bank_statement.html  base.html  recurring.html  stock_portfolio.html
MockBank/testing/: README.md  seed_data.py  test_api.py
SpendWise/: pyproject.toml
SpendWise/api/: main.py
SpendWise/api/routes/: budgets.py  chat.py  stocks.py  transactions.py  travel.py
SpendWise/data/: .gitkeep  spendwise.db
SpendWise/mcp-server-sms/: README.md  pyproject.toml
SpendWise/mcp-server-sms/src/mcp_server_sms/: __init__.py  __main__.py  server.py
SpendWise/mcp-server-stock/: README.md  pyproject.toml
SpendWise/mcp-server-stock/src/mcp_server_stock/: __init__.py  __main__.py  server.py
SpendWise/mcp-server-travel/: README.md  pyproject.toml
SpendWise/mcp-server-travel/src/mcp_server_travel/: __init__.py  __main__.py  server.py
SpendWise/scripts/: README.md  bank_sync.py
SpendWise/src/spendwise/: __init__.py
SpendWise/src/spendwise/agents/: __init__.py  budget_agent.py  import_agent.py  insights_agent.py  orchestrator_agent.py  spending_agent.py  stock_agent.py  travel_agent.py
SpendWise/src/spendwise/config/: __init__.py  settings.py
SpendWise/src/spendwise/mcp/: __init__.py  sms_server.py  sqlite_server.py  stock_server.py  travel_server.py
SpendWise/src/spendwise/utils/: __init__.py  csv_parser.py
SpendWise/testing/: README.md  budget_demo.py  discover_amadeus_ips.py  import_demo.py  import_mockbank_data.py  mcp_sms_demo.py  seed_data.py  spending_demo.py  stock_demo.py  test_fmp_api.py  travel_demo.py
SpendWise/testing/data/: bank_export.csv
SpendWise/web/: package-lock.json  package.json
SpendWise/web/src/app/: globals.css  layout.tsx  page.tsx
SpendWise/web/src/app/budgets/: page.tsx
SpendWise/web/src/app/stocks/: page.tsx
SpendWise/web/src/app/transactions/: page.tsx
SpendWise/web/src/app/travel/: page.tsx
SpendWise/web/src/components/: AppLayout.tsx  ChatPanel.tsx  Sidebar.tsx
SpendWise/web/src/lib/: api.ts
python-mcp-sandbox-openai-sdk/src/mcp_sandbox_openai_sdk/: mcp_manifest.py  runtime_permissions.py  sandbox.py
