[project]
name = "mcp-server-stock"
version = "0.1.0"
description = "MCP Server for Stock Market Data (FMP API) and Trading (MockBank)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SpendWise Team" }]
keywords = ["mcp", "stocks", "finance", "trading", "llm", "automation"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-stock = "mcp_server_stock:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.0.0", "ruff>=0.7.0"]
