[project]
name = "mcp-server-travel"
version = "0.1.0"
description = "Combined MCP Server for Travel APIs - Flights, Hotels, Weather, Attractions"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "SpendWise Team" }]
keywords = ["mcp", "travel", "flights", "hotels", "weather", "attractions", "llm"]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.1.3",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-server-travel = "mcp_server_travel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

